# npl

./: .gitignore  CMakeLists.txt  README.md  test.txt
L4proto_ctr/: Cargo.toml
L4proto_ctr/src/: main.rs
dnslookup/: Cargo.toml
dnslookup/src/: main.rs
echo/: Cargo.toml
endianness/: Cargo.toml
endianness/src/: main.rs
exams/2022-06-27/: collector.cpp  probe-bulk.cpp  probe-elastic.cpp  probe.cpp
exams/2022-07-18/: 2022-07-18.hpp
exams/2023-06-05/: 20230605-bitset.hpp  20230605-bool.hpp  ip-count.cpp
exams/2024-06-03/: 20240603.hpp  one.cpp
exams/2025-06-13/dns-analyzer/: Cargo.toml
exams/2025-06-13/dns-analyzer/src/: main.rs
exams/e20230130/: Cargo.toml
exams/e20230130/src/: main.rs
find-my-ip/: Cargo.toml
first-pcap/: Cargo.toml
first-pcap/src/: main.rs
http-find-my-ip/: Cargo.toml
lib/hdr/: chatroom.hpp
lib/libnpl/: frame.hpp  headers.hpp  libnpl.hpp  packet.hpp  pcap.hpp  pcap_frame.hpp  sockaddress.hpp  socket.hpp  utility.hpp
lookup/src/: main.rs
mbaby/: Cargo.toml
mbaby/programs/: add2num.asm  diffeqt.asm  hcf.asm  intdiv.snp  longdiv2.snp  medclock.snp  nightmare.snp  noodletimer.snp  primegen.asm  slide9.snp  virpet.asm
mbaby/progs/: 2first.asm  Baby9.snp  first.asm  first.snp  flash.asm  hfr989.asm  longdiv2.snp  medclock.snp  nightmare.snp  noodletimer.snp  slide9.snp  virpet.asm
mbaby/src/: main.rs
news-server/: Cargo.toml
parse-test/: Cargo.toml
parse-test/src/: main.rs
pcap-sniffer/: Cargo.toml
pcap-sniffer/src/: main.rs
pnet_sniffer/: Cargo.toml
pnet_sniffer/src/: main.rs
prova/: uno.txt
src/: bcaster.cpp  blistener.cpp  cPcap-sniff.cpp  chatroom-ncurses.cpp  chatroom-server.cpp  chatroom.cpp  dl-mt-sniff.cpp  dl-sniff.cpp  endianness.cpp  ip_clt.cpp  ip_ctr.cpp  ip_srv.cpp  jtest.cpp  l2-mt-sniff.cpp  l2-sniff.cpp  l3-sniff.cpp  main.cpp  nl-sniff.cpp  pcap-count.cpp  pcap-sniff.cpp  tcp_clt.cpp  tcp_mt_srv.cpp  tcp_naive_srv.cpp  tcp_srv.cpp  tcp_srv_mt.cpp  udp_clt.cpp  udp_srv.cpp  unix_clt.cpp  unix_srv.cpp
top-ip-senders/: Cargo.toml
top-ip-senders/src/: main.rs
