cmake_minimum_required(VERSION 3.0.0)
project(npl VERSION 0.1.0)
set(CMAKE_CXX_STANDARD_REQUIRED 20)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
#SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${npl_SOURCE_DIR}/bin)
#SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")


include_directories(/usr/local/include)
include_directories(lib/libnpl)
include_directories(lib/nlohmann)
include_directories(lib/hdr)

link_directories(/usr/local/lib)

if (UNIX AND NOT APPLE)
    set (LINUX TRUE)
endif()
include(CTest)
enable_testing()

add_executable(main src/main.cpp)
add_executable(jtest src/jtest.cpp)
add_executable(endianness src/endianness.cpp)
add_executable(unix_srv src/unix_srv.cpp)
add_executable(unix_clt src/unix_clt.cpp)
add_executable(ip_srv src/ip_srv.cpp)
add_executable(ip_clt src/ip_clt.cpp)
add_executable(tcp_clt src/tcp_clt.cpp)
add_executable(tcp_naive_srv src/tcp_naive_srv.cpp)
add_executable(tcp_srv src/tcp_srv.cpp)
add_executable(tcp_mt_srv src/tcp_mt_srv.cpp)
add_executable(bcaster src/bcaster.cpp)
add_executable(blistener src/blistener.cpp)
add_executable(chatroom-server src/chatroom-server.cpp)
add_executable(chatroom-ncurses src/chatroom-ncurses.cpp)
add_executable(chatroom src/chatroom.cpp)
add_executable(nl-sniff src/nl-sniff.cpp)
add_executable(pcap-sniff src/pcap-sniff.cpp)
add_executable(probe exams/2022-06-27/probe.cpp)
add_executable(collector exams/2022-06-27/collector.cpp)
add_executable(probe-elastic exams/2022-06-27/probe-elastic.cpp)
add_executable(probe-bulk exams/2022-06-27/probe-bulk.cpp)

if (LINUX)
    add_executable(dl-sniff src/dl-sniff.cpp)
    add_executable(dl-mt-sniff src/dl-mt-sniff.cpp)
endif()

target_link_libraries(chatroom-ncurses ncurses)
target_link_libraries(pcap-sniff pcap)
target_link_libraries(probe pcap)
target_link_libraries(probe-elastic pcap restclient-cpp)
target_link_libraries(probe-bulk pcap restclient-cpp)
target_link_libraries(collector pcap)



set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
