cmake_minimum_required(VERSION 3.0.0)
project(npl VERSION 0.1.0 LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD_REQUIRED 20)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)

include_directories(lib/libnpl)
include_directories(lib/nlohmann)

if (UNIX AND NOT APPLE)
    set (LINUX true)
endif()

add_executable(main src/main.cpp)
add_executable(endianness src/endianness.cpp)
add_executable(udp_srv src/udp_srv.cpp)
add_executable(udp_clt src/udp_clt.cpp)
add_executable(tcp_srv_naive src/tcp_srv_naive.cpp)
add_executable(tcp_srv src/tcp_srv.cpp)
add_executable(tcp_srv_mt src/tcp_srv_mt.cpp)
add_executable(unix_srv src/unix_srv.cpp)
add_executable(unix_clt src/unix_clt.cpp)

add_executable(bcaster src/bcaster.cpp)
add_executable(blistener src/blistener.cpp)
add_executable(l3-sniff src/l3-sniff.cpp)
add_executable(cPcap-sniff src/cPcap-sniff.cpp)
target_link_libraries(cPcap-sniff pcap)
add_executable(pcap-sniff src/pcap-sniff.cpp)
add_executable(pcap-count src/pcap-count.cpp)
add_executable(ip_ctr src/ip_ctr.cpp)
target_link_libraries(pcap-sniff pcap)
target_link_libraries(pcap-count pcap)
target_link_libraries(ip_ctr pcap)

if (LINUX)
    add_executable(l2-sniff src/l2-sniff.cpp)
    add_executable(l2-mt-sniff src/l2-mt-sniff.cpp)
endif()

include(CTest)
enable_testing()

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
